Always display vertical scrollbar to prevent pages jumping

--- a/assets/stylesheets/_layout.sass
+++ b/assets/stylesheets/_layout.sass
@@ -1,3 +1,5 @@
+html
+  overflow-y: scroll
 
 .row
   max-width: 1200px
